# SharQ

./: .gitignore  README.md  SERVER_BUILD_NOTES.md  evaluate.sh
benchmarks/: README.md
benchmarks/ablation/: example_fused_linear_mse.py  example_fused_linear_shared_payload.py  example_pair_mask_strategy_compare.py  example_pair_top2_pseudo_current.py  example_shared_w32_dense_mse.py  sweep_pair_mask_strategy_compare.py
benchmarks/correctness/: example_fused_pairtop2_matrix_suite.py  example_fused_sparse_prepare.py  example_kernel_vs_pseudo_current.py  example_qlinear_sanity.py  example_shared_w32_sanity.py  example_sparse_fp4_chunk_diagnose.py  example_sparse_gemm_sanity.py
benchmarks/e2e/: benchmark_e2e_sharq.py  benchmark_prefill_e2e.py  modeling_sharq.py
benchmarks/perf/: benchmark_fused_linear_and_kernel.py  example_sparse_nvfp4.py  sweep_sparse_nvfp4.py
benchmarks/vllm/: run_exp.py  sharq.py  sharq_quant.py
demo/: chat_qwen.py  chat_qwen35.py
kernels/: CMakeLists.txt  README.md
kernels/benchmark/: bench_nvfp4.cu  bench_sharq_linear.cu  bench_sparse_nvfp4.cu
kernels/include/: fused_sparse_prepare.h  nvfp4.h  reorder.cuh  shared_weight_nvfp4.h  sparse_nvfp4.h
kernels/src/: bindings.cpp  down.cu  fused_rmsnorm_sparse_prepare.cu  fused_sparse_prepare.cu  nvfp4.cu  shared_weight_nvfp4.cu  sparse_nvfp4.cu
model/: __init__.py  datautils.py  eval.py  hif4.py  main.py  model_utils.py  qLinearLayer.py  qLlamaLayer.py  qMixtralLayer.py  qQwenLayer.py  quantize.py
